--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="pt" ng-app="myApp" class="no-js manifest="/app.manifest" lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="pt" ng-app="myApp" class="no-js manifest="/app.manifest" lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="pt" ng-app="myApp" class="no-js manifest="/app.manifest" lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="pt" ng-app="myApp" class="no-js" manifest="/app.manifest"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html lang="pt" ng-app="myApp" class="no-js manifest="app.manifest" lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="pt" ng-app="myApp" class="no-js manifest="app.manifest" lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="pt" ng-app="myApp" class="no-js manifest="app.manifest" lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="pt" ng-app="myApp" class="no-js" manifest="app.manifest"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
