Show a full page header on load

--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
   <![endif]-->
 
   <main ng-controller="SearchController">
-    <header>
+    <header class="full-page">
       <h1>Ourikas</h1>
       <input class="search-field" placeholder="buscar..." type="search" ng-model="searchTerm" autofocus>
     </header>
